--- a/estilos/main.css
+++ b/estilos/main.css
@@ -109,8 +109,14 @@ nav .nav__nav .nav__listItem{
     text-align:right;
     padding-top: 20px;
 }
+.shop__container .shop__footer button{
+    border:none; 
+}
+.shop__container .shop__footer button:hover{
+    cursor: pointer; 
+}
+
 .shop__container .shop__footer .shop__cartAdd{
-    margin:8px 0;
     padding: 10px 20px;
     background-color: #c5678d;
     color:#ededed;
@@ -118,6 +124,7 @@ nav .nav__nav .nav__listItem{
     bottom: 5px;
     left:5px;
     transition: all 0.4s;
+    
 }
 .shop__container .shop__footer .shop__cartAdd:hover{
     background: pink;
@@ -137,10 +144,13 @@ nav .nav__nav .nav__listItem{
 .shop__container .shop__footer .shop__quantityContainer .button-quantity{
     display:flex;
     padding: 2px 5px;
-    height: 30px;
+    height: 28px;
     width: 20px;
-    background: darkolivegreen;
+    background: #c5678d;
     text-align:center;
+    border-radius: 2px;
+    align-items: center;
+    color:white;
 }
 .shop__container .shop__footer .shop__quantityContainer .shop__quantity{
     padding:2px 10px;
@@ -149,7 +159,6 @@ nav .nav__nav .nav__listItem{
 
 /* ----------- Modal ----------- */
 .body__modal{
-    visibility: hidden;
     display:flex;
     justify-content: center;
     align-content: center;
@@ -158,10 +167,10 @@ nav .nav__nav .nav__listItem{
     position:fixed;
     top: 20vh;
     width: 60vw;
-    height: 60vh;
+    height: 70vh;
     background-color: #ededed;
     border: 2px solid #0e0e0e;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 .body__modal .modal__container .modal__title{
     padding: 10px;
@@ -200,7 +209,23 @@ nav .nav__nav .nav__listItem{
 }
 .body__modal .modal__container .modal__cartClean{
     text-align: center;
-    padding: 50px;
+    padding-top: 30px;
+}
+.body__modal .modal__container .close__buttonContainer{
+    display:flex;
+    justify-content: flex-end;
+    align-content: flex-end;
+}
+.body__modal .modal__container .close__buttonContainer .close__button{
+    display: inline-block;
+    background-color: #c5678d;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+    border: black solid 2px;
+    padding: 3px 10px;
+    margin: 10px;
+
 }
 .modal__closeIcon{
     font-size:20px;
